@@ -47,6 +47,10 @@ Breaking Changes:
 
 Other changes:
 
+- Drag and Drop: Fixed handling of overlapping targets when smaller one is submitted
+  before and can accept the same data type. (#6183).
+- Drag and Drop: Clear drag and drop state as soon as delivery is accepted in order to
+  avoid inteferences. (#5817, #6183) [@DimaKoltun]
 - Backends: Win32: Use WM_NCMOUSEMOVE / WM_NCMOUSELEAVE to track mouse positions over
   non-client area (e.g. OS decorations) when app is not focused. (#6045, #6162)
 
